--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: Scheduled README Regeneration
 
 on:
   schedule:
-    - cron: '0 5 * * *' # Every 24 hours at 05:00 (UTC)
+    - cron: '0 5 * * *' # every 24 hours at 05:00 (UTC)
+  workflow_dispatch: # allows manual run
 
 jobs:
   run-go-script:
