--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Scheduled README Regeneration
 
 on:
   schedule:
-    - cron: '0 5 * * *' # every 24 hours at 05:00 (UTC)
+    - cron: '0 5 * * 1,4' # 05:00 (UTC)
   workflow_dispatch: # allows manual run
 
 permissions:
