--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,3 +50,4 @@ jobs:
         uses: ad-m/github-push-action@v0.8.0
         with:
           github_token: ${{ secrets.GHTKN }}
+          force: true
