--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Scheduled README Regeneration
 
 on:
   schedule:
-    - cron: '0 1 * * 0,1,3,5,6' # 01:00 (UTC)
+    - cron: '0 1 * * 2-7' # 01:00 (UTC)
   workflow_dispatch: # allows manual run
 
 permissions:
@@ -43,7 +43,7 @@ jobs:
 
       - name: Commit changes
         run: |
-          git add README.md
+          git add README.md || true
           git commit -m 'Scheduled activity update' || true
       
       - name: Push changes
