--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
-name: Scheduled README Regeneration
+name: README generate schedule
 
 on:
   schedule:
-    - cron: '0 1 * * 2-7' # 01:00 (UTC)
+    - cron: '0 1 * * *' # 01:00 (UTC)
   workflow_dispatch: # allows manual run
 
 permissions:
